--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10942,16 +10942,15 @@ nav .navbar-brand {
 .card {
   background-color: white;
   border: none;
-  box-shadow: 15px 15px 0px 0 #3cc2eb;
   border-radius: 8px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
   overflow: hidden;
 }
 
 .card .card-header {
+  background-color: white;
   font-weight: bold;
   border: none;
-  background-color: white;
   color: #6cb2eb;
 }
 
@@ -10962,9 +10961,5 @@ footer {
   color: #fff;
   text-align: center;
   padding: 30px 0;
-  position: absolute;
-  /*←絶対位置*/
-  bottom: 0;
-  /*に固定*/
 }
 
